@@ -1,5 +1,10 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2003-02-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* include/log4cpp/AbortAppender.hh, src/AbortAppender.cpp: added
+	missing layout methods.
+	* src/PropertyConfiguratorImpl.cpp: added AbortAppender.
+	
 2003-01-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* src/RemoteSyslogAppender.cpp: fixed handling of large messages and
 	buffer deallocation in _append() as reported by Benety Goh.
